--- a/src/pages/Game.css
+++ b/src/pages/Game.css
@@ -67,12 +67,12 @@
 }
 
 .yellow__box {
-    background: #FFD600;
     box-shadow: 0px 0px 8px 2px rgba(255, 202, 13, 0.25);
-    border-radius: 6px;
-    color: black;
+    border-radius: 10px 20px;
+    color: #FFD600;
     padding: 0.5rem 1rem;
     font-size: 1.4rem;
+    border: 2px solid #FFD600;
 }
 
 .option__container {
@@ -93,6 +93,7 @@
     padding: 0.8rem 1rem;
     font-size: 1.5rem;
     cursor: pointer;
+    text-transform: capitalize;
 }
 
 .option_box__unfill.correct_opt {
